--- a/HikvisionCameraPlayer/app/build.gradle
+++ b/HikvisionCameraPlayer/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "29.0.2"
+    namespace 'com.example.hikvisioncameraplayer'
+
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.example.hikvisioncameraplayer"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         ndk {
