--- a/HikvisionCameraPlayer/build.gradle
+++ b/HikvisionCameraPlayer/build.gradle
@@ -1,13 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//android {
+//}
 
 buildscript {
+
+    ext {
+        agp_version = '8.8.0-alpha09'
+        agp_version1 = '8.7.2'
+        agp_version2 = agp_version1
+        agp_version3 = agp_version1
+        agp_version4 = '8.7.0'
+    }
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath "com.android.tools.build:gradle:$agp_version4"
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,7 +27,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         
     }
 }
